refactor: reduce cyclomatic complexity across codebase
- Add gocyclo pre-commit hook with threshold of 15
- Refactor run() in main.go: extract loadVulnDB(), initGitHub(), fetchRepos(), scanRepository()
- Refactor ReportSummary(): extract printSummaryHeader(), printSummaryStats(), printAffectedRepos()
- Refactor ReportRepoResult(): extract helper functions for each report section
- Refactor parseCSV(): extract detectColumnIndices(), parseVersions(), parseSingleRecord()
- Refactor FindPackageFiles(): extract shouldIncludeFile()

All functions now have cyclomatic complexity ≤15 (was up to 41)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,3 +29,9 @@ repos:
         language: system
         pass_filenames: false
         types: [go]
+      - id: gocyclo
+        name: gocyclo (cyclomatic complexity)
+        entry: bash -c 'go install github.com/fzipp/gocyclo/cmd/gocyclo@latest && gocyclo -over 15 .'
+        language: system
+        pass_filenames: false
+        types: [go]
